# hypermodern_python

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  data.json  index.rst  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  pre-commit.yaml  publish.yaml  release.yml  ruff  ruff.yml  test-pypi.yml  tests.yaml  tests.yml
api/: modules.rst  pywc.console.rst  pywc.data.rst  pywc.format.rst  pywc.navigation.rst  pywc.rst
docs/: cli.md  conf.py  index.md  index.rst  projects.md  reference.md
docs/_static/: custom.css  custom.js
docs/_templates/: index.rst
docs/api/: modules.rst  pywc.console.rst  pywc.data.rst  pywc.format.rst  pywc.navigation.rst  pywc.rst
docs/grade/: cicd.md  cli.md  code.md  flamegraph.md  grade.md  poe.md  pypi.md  pytest.md  pytest_plus.md  readme.md  ruff.md  sphinx.md  sphinx_flamegraph.md  sphinx_plus.md  ty.md  uv.md
docs/materials/: cicd.md  cli.md  git.md  index.md  logger.md  performance.md  poe.md  profiling.md  pypi.md  ruff.md  sphinx.md  tests.md  ty.md  uv.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_24afd3cdbc6e132b_console_py.html  z_24afd3cdbc6e132b_data_py.html  z_24afd3cdbc6e132b_format_py.html  z_24afd3cdbc6e132b_navigation_py.html
plots/: __init__.py  performance.py
src/hypermodern_python/: __init__.py
src/pywc/: __init__.py  console.py  data.py  format.py  logic.py  navigation.py  wc.py
src/pywd/: __init__.py  console.py  wd.py
tests/: __init__.py  conftest.py  test_console.py  test_data.py  test_format.py  test_logic.py  test_navigation.py  test_wikipedia.py
utils/: scour-cli.py
