[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.7.20,<0.8" ]

[project]
name = "pywc"
version = "0.1.0"
description = 'Redesigned course based on older articles "Hypermodern Python" by Claudio Jolowicz.'
readme = "README.md"
authors = [ { name = "Dersbyshev Dmitry", email = "kirikusan@gmail.com" } ]
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
scripts.pywc = "pywc.console:main"

[dependency-groups]
dev = [
  "poethepoet>=0.43.0",
  "pyproject-fmt>=2.18.1",
  "ruff>=0.15.5",
  "ty>=0.0.29",
  { include-group = "docs" },
  { include-group = "tests" },
]
docs = [
  "furo>=2025.12.19",
  "myst-parser>=5.0.0",
  "pydoclint>=0.8.3",
  "sphinx>=9.1.0",
  "sphinx-pyproject>=0.3.0",
]
tests = [
  "pytest>=9.0.2",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-mypy>=1.0.1",
  "pytest-randomly>=4.0.1",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4
exclude = [ "docs" ]
[tool.ruff.format]
indent-style = "space"
quote-style = "double"
[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "AIR",    # Airflow is not used
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "DJ",     # django is not used
  "E111",   # indentation-with-tabs
  "E114",   # indentation-with-tabs-comment
  "E117",   # over-indented
  "FAST",   # FastAPI is not used
  "FIX",    # TODOs are allowed and encouraged
  "G",      # logging is not used
  "INT",    # gettext is not used
  "LOG",    # logging is not used
  # "D206",    # docstring-tab-indentation
  # "D300",    # triple-single-quotes
  "Q000",   # bad-quotes-inline-string
  "Q001",   # bad-quotes-multiline-string
  "Q002",   # bad-quotes-docstring
  "Q003",   # avoidable-escaped-quote
  "Q003",   # avoidable-escaped-quote
  "Q004",   # unnecessary-escaped-quote
  # "NPY",   # numpy may be used
  # "PD",    # pandas may be used
  # "PT",    # pytest is used

  # Docstring style deselects D rules automatically

  # Recommended against using these rule alongside the formatter
  "W191",   # tab-indentation
]
per-file-ignores."tests/*.py" = [
  "S101",   # Allow asserts
  "INP001", # Allow missing __init__.py
  "PT011",  # Allow pytest.raises(Exception) without precise message
]
fixable = [ "ALL" ]
external = [ "DOC101", "DOC103" ]
pydocstyle.convention = "google"  # alternatives - "numpy" or "pep257"

[tool.pydoclint]
skip_checking_short_docstrings = false

[tool.pyproject-fmt]
table_format = "long"  # Expand all tables by default
collapse_tables = [ "project" ]  # Collapse project sub-tables
expand_tables = [ "project.optional-dependencies" ]  # But expand this specific one
keep_full_version = true

[tool.coverage.report]
show_missing = true
skip_covered = false  # ← important: do NOT hide 100% files
sort = "Cover"  # or "Miss", "Name", etc.
fail_under = 95
[tool.coverage.run]
source = [ "src/pywc" ]
omit = [
  "tests/*",
]

[tool.sphinx-pyproject]
extensions = [
  "myst_parser",
  "sphinx.ext.napoleon",
]
html_theme = "furo"
html_static_path = [ "_static" ]
templates_path = [ "_templates" ]
exclude_patterns = [ "_build" ]

[tool.poe.tasks]
# === Core / Development tasks ===
test = { cmd = "pytest --cov --mypy", help = "Run the test suite with coverage reporting" }
pywc = { cmd = "pywc", help = "Run the pywc command-line tool" }
# === Individual code quality / formatting tasks ===
ruff_format = { cmd = "ruff format", help = "Format Python code using Ruff" }
ruff_lint = { cmd = "ruff check --fix", help = "Lint Python code with Ruff and fix fixable issues" }
format_toml = { cmd = "pyproject-fmt pyproject.toml", help = "Format pyproject.toml" }
pydoclint = { cmd = "pydoclint --style google src", help = "Check docstring style and completeness" }
typecheck = { cmd = "ty check", help = "Check type annotations (static checking)" }
# === Documentation generation ===
doc = { sequence = [
  { cmd = "sphinx-apidoc -o docs/api --separate src/pywc" },
  { cmd = "make html", cwd = "docs" },
], help = "Generate API documentation with sphinx-apidoc and build the HTML docs" }

# === Composite tasks ===
[tool.poe.tasks.format]
help = "Run the full formatting and style pipeline (TOML + Ruff format + Ruff lint + docstring check)"
sequence = [
  { ref = "format_toml", ignore_fail = true },  # Format-toml returns false if it changes file
  { ref = "ruff_format" },
  { ref = "ruff_lint" },
  { ref = "pydoclint" },
  { ref = "typecheck" },
]
ignore_fail = "return_non_zero"
[tool.poe.tasks.lint]
help = "Run linting only (Ruff + pydoclint)"
sequence = [
  { ref = "ruff_lint" },
  { ref = "pydoclint" },
]
ignore_fail = "return_non_zero"
