[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.7.20,<0.8" ]

[project]
name = "pywc"
version = "0.1.0"
description = 'Redesigned course based on older articles "Hypermodern Python" by Claudio Jolowicz.'
readme = "README.md"
authors = [ { name = "Dersbyshev Dmitry", email = "kirikusan@gmail.com" } ]
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "click>=8.3.1",
]
scripts.pywc = "pywc.console:main"

[dependency-groups]
dev = [
  "mdformat>=1.0.0",
  "mdformat-black>=0.1.1",
  "mdformat-myst>=0.3.0",
  "mdformat-web>=0.2.0",
  "poethepoet>=0.43.0",
  "pre-commit>=4.5.1",
  "pyproject-fmt>=2.18.1",
  "rstfmt>=0.0.14",
  "ruff>=0.15.5",
  "scour>=0.38.2",
  "ty>=0.0.29",
  { include-group = "docs" },
  { include-group = "tests" },
]
docs = [
  "furo>=2025.12.19",
  "myst-parser>=5.0.0",
  "pydoclint>=0.8.3",
  "sphinx-autoapi>=3.8.0",
  "sphinx-click>=6.2.0",
  "sphinx-design>=0.7.0",
  "sphinx-pyproject>=0.3.0",
  "sphinxcontrib-mermaid>=2.0.1",
]
tests = [
  "coverage>=7.13.5",
  "pytest>=9.0.2",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "pytest-mypy>=1.0.1",
  "pytest-randomly>=4.0.1",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4
exclude = [ "docs" ]
[tool.ruff.format]
indent-style = "space"
quote-style = "double"
[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "AIR",    # Airflow is not used
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "DJ",     # django is not used
  "E111",   # indentation-with-tabs
  "E114",   # indentation-with-tabs-comment
  "E117",   # over-indented
  "FAST",   # FastAPI is not used
  "FIX",    # TODOs are allowed and encouraged
  "G",      # logging is not used
  "INT",    # gettext is not used
  "LOG",    # logging is not used
  # "D206",    # docstring-tab-indentation
  # "D300",    # triple-single-quotes
  "Q000",   # bad-quotes-inline-string
  "Q001",   # bad-quotes-multiline-string
  "Q002",   # bad-quotes-docstring
  "Q003",   # avoidable-escaped-quote
  "Q003",   # avoidable-escaped-quote
  "Q004",   # unnecessary-escaped-quote
  # "NPY",   # numpy may be used
  # "PD",    # pandas may be used
  # "PT",    # pytest is used

  # Docstring style deselects D rules automatically

  # Recommended against using these rule alongside the formatter
  "W191",   # tab-indentation
]
per-file-ignores."tests/*.py" = [
  "S101",   # Allow asserts
  "INP001", # Allow missing __init__.py
  "PT011",  # Allow pytest.raises(Exception) without precise message
]
fixable = [ "ALL" ]
external = [ "DOC101", "DOC103" ]
pydocstyle.convention = "google"  # alternatives - "numpy" or "pep257"

[tool.pydoclint]
skip_checking_short_docstrings = false

[tool.pyproject-fmt]
table_format = "long"  # Expand all tables by default
collapse_tables = [ "project" ]  # Collapse project sub-tables
expand_tables = [ "project.optional-dependencies" ]  # But expand this specific one
keep_full_version = true

[tool.coverage.report]
show_missing = true
skip_covered = false  # ← important: do NOT hide 100% files
sort = "Cover"  # or "Miss", "Name", etc.
fail_under = 95
[tool.coverage.run]
source = [ "src/pywc" ]
omit = [
  "tests/*",
]

[tool.sphinx-pyproject]
extensions = [
  "myst_parser",
  "autoapi.extension",
  "sphinx_click",
  "sphinx.ext.napoleon",
  "sphinx.ext.autodoc",
  "sphinx.ext.todo",
  "sphinx_design",
  "sphinxcontrib.mermaid",
]
myst_enable_extensions = [ "colon_fence" ]
autoapi_dirs = [ "../src/pywc" ]
autoapi_options = [
  "members",
  "special-members",
  "show-inheritance",
  "show-module-summary",
  # "private-members",  # etc.
]
html_theme = "furo"
html_static_path = [ "_static" ]
html_css_files = [ "custom.css" ]
templates_path = [ "_templates" ]
exclude_patterns = [ "_build" ]
autodoc_typehints = "description"
autoapi_template_dir = "_templates"
source_suffix = { ".rst" = "restructuredtext", ".md" = "markdown" }

[tool.poe.tasks]
# === Core / Development tasks ===
test = { cmd = "pytest --cov", help = "Run the test suite with coverage reporting" }
test-coverage = { cmd = "coverage run -m pytest tests/", help = "Generates .coverage" }
pywc = { cmd = "pywc", help = "Run the pywc command-line tool" }
# === Individual code quality / formatting tasks ===
format_py = { cmd = "ruff format", help = "Format Python code using Ruff" }
lint_py = { cmd = "ruff check --fix", help = "Lint Python code with Ruff and fix fixable issues" }
check_py = { sequence = [
  { cmd = "ruff format --check", help = "Check that Python code is formatted" },
  { cmd = "ruff check", help = "Check that Python code is formatted" },
] }
format_toml = { cmd = "pyproject-fmt pyproject.toml", help = "Format pyproject.toml" }
check_toml = { cmd = "pyproject-fmt pyproject.toml --check", help = "Check that pyproject.toml is formatted" }
optimize_svg = { cmd = "python ./utils/scour-cli.py ./docs/_static/img/logo/*.svg", help = "Optimize SVG file(s) in-place with Scour" }
# TODO: add format_svg and check_svg
format_md = { cmd = "mdformat ./docs/*.md ./docs/*/*.md", help = "Format .md files in documentation" }
check_md = { cmd = "mdformat --check ./docs/*.md ./docs/*/*.md", help = "Check that .md files in documentation are formatted" }
typecheck = { cmd = "ty check", help = "Check type annotations (static checking)" }
lint_doc = { cmd = "pydoclint --style google src", help = "Check docstring style and completeness" }
format_rst = { cmd = "rstfmt --ext rst .", help = "Format .rst files in documentation" }
check_rst = { cmd = "rstfmt --check --ext rst .", help = "Check that .rst files in documentation are formattedare formatted" }
# === Documentation generation ===
build_doc = { sequence = [
  { cmd = "make clean", cwd = "docs" },
  { cmd = "make html", cwd = "docs" },
], help = "Generate API documentation with sphinx-apidoc and build the HTML docs" }

# === CI/CD task ===
[tool.poe.tasks.ci]
help = "Run the full CI pipeline: formatting/linting checks + typecheck + docstring check + tests + docs build"
sequence = [
  { parallel = [
    { ref = "check_py" },
    { ref = "check_toml" },
    { ref = "check_md" },
    { ref = "check_rst" },
    { ref = "lint_doc" },
    { ref = "typecheck" },
    { ref = "test" },
    { ref = "build_doc" },
  ] },
]
[tool.poe.tasks.doc_host]
help = "Generate and host documentation on localhost"
sequence = [
  { ref = "build_doc" },
  { cmd = "python -m http.server ${port}", cwd = "docs/_build/html" },
]
[[tool.poe.tasks.doc_host.args]]
name = "port"
help = "localhost port which will host the documentation"
positional = true
type = "integer"

# === Composite tasks ===
[tool.poe.tasks.format]
help = "Run the full formatting pipeline (TOML + Markdown + RST + SVG + Ruff format)"
sequence = [
  { ref = "format_toml", ignore_fail = true },  # Returns non-zero when it makes changes
  { ref = "format_md" },
  { ref = "format_rst" },
  { ref = "optimize_svg" },
  { ref = "format_py" },
]
[tool.poe.tasks.lint]
help = "Run all linting, type checking, and docstring validation (after formatting)"
sequence = [
  { ref = "format" },
  { ref = "lint_py" },
  { ref = "lint_doc" },
  { ref = "typecheck" },
]
